derive vars, render result and score. And move TimerChallenge reset into handleReset instead of handleStop to not immediately wipe results

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 	--bg-light: rgb(232, 232, 232);
 	--shadow-dark: 0 2px 8px rgba(0, 0, 0, 0.853);
 	--shadow-light: 0 2px 4px rgba(0, 0, 0, 0.18);
-	--color-primary: #0073ff;
+	--color-primary: #2a49b8;
 	--boarder-radius-card: 0.2rem;
 }
 
